--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: mycourse100-test  # FIXME: Replace this with your application id
-version: 1
+version: 2
 runtime: python27
 api_version: 1
 threadsafe: false
@@ -24,7 +24,7 @@ handlers:
   static_dir: assets
 - url: /.*
   script: main.app
-  login: required
+  login: admin
 - url: /robots.txt
   static_files: robots.txt
   upload: robots.txt
